kubernetes/apps/home-automation/frigate/app/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frigate-zitadel-auth
spec:
  forwardAuth:
    address: http://oauth2-proxy-app.authentication.svc.cluster.local:4180/
    trustForwardHeader: false
    authResponseHeaders:
      - X-Auth-Request-Email
